/*
 * Copyright (C) 2014-2019 Lightbend Inc. <https://www.lightbend.com>
 */

syntax = "proto2";

package docs.ddata;

//#twophaseset
option java_package = "docs.ddata.protobuf.msg";
option optimize_for = SPEED;

message TwoPhaseSet {
  repeated string adds = 1;
  repeated string removals = 2;
}
//#twophaseset

//#twophaseset2
message TwoPhaseSet2 {
  optional bytes adds = 1;
  optional bytes removals = 2;
}
//#twophaseset2



